Entries are given with the most recent entry first.
Each entry has the developer who committed the change in brackets.
Entries without name were done by Richard Jones.

2013-??-??: 1.4.22

Features:

- Renamed old Templates classes to Loader classes to clarify sources
  for alternative templating engines, updated docs (anatoly techtonik)

Fixed:

- Restored compatibility with old style trackers (anatoly techtonik)
- Make roundup play nice with setup tools (for using with virtualenv)
  (Pradip Caulagi)
- [minor] Template responsive: make demo.py work out of the box with it,
  by setting the static_files config.ini setting to "static". 
  Footer: link fixed and hardcoded last modfied date removed. (Bernhard Reiter)
- demo.py tracker home is configurable, its location is printed and
  the directory is fully erased when nuking (anatoly techtonik)


2012-12-21: 1.4.21

Features:

- issue2550782: Added a new irker detector to send notifications on IRC
  when an issue is created or messages are added. (Ezio Melotti)
- Beta version of responsive templates using devel schema
  and Twitter Bootstrap for styling (Pradip Caulagi)
- pywin32 is no longer required to run on Windows (anatoly techtonik)
- Rewritten portalocker.py logic in ctypes for Windows (anatoly techtonik)
- Add an interface to register clearCache callbacks in roundupdb.
  Sometimes complicated computations may require an application cache.
  This application can now register a callback to clear the application
  cache, because roundup knows better when to clear it (usually when a
  transaction ends, either with rollback or with commit). The interface
  for this is currently considered experimental. The current interface
  is registerClearCacheCallback(self, method, param) where method is
  called with param as the only parameter.  (Ralf Schlatterbeck)
- Add a script to remove file-spam from a tracker, see
  scripts/spam-remover. (Ralf Schlatterbeck)

Fixed:
